--- a/src/main/resources/wechat-keys.properties
+++ b/src/main/resources/wechat-keys.properties
@@ -3,3 +3,5 @@ wechat.encodingAesKey=Ly2xPGHMoMUfzNCxqIN3Z2NopsnKzGGEwvRo56j0pWT
 wechat.appId=wxcbba150534e590d1
 
 wechat.simsimi.api.key = 4c353134-3d6d-4da9-bb15-a189065e44e4
+
+wechat.db.filepath =
